# Bilky

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/core/: Bilky.hpp  CMakeLists.txt  Card.cpp  Card.hpp  CardCollection.cpp  CardCollection.hpp  DealInfo.hpp  Dealer.cpp  Dealer.hpp  Game.cpp  Game.hpp  ICardCollection.hpp  Player.cpp  Player.hpp  Roster.cpp  Roster.hpp  Round.cpp  Round.hpp  Trick.cpp  Trick.hpp  main.cpp
src/desktop/: CmakeLists.txt  main.cpp
src/recondite/: BilkyApplication.cpp  BilkyModule.cpp  BilkyModule.hpp
